# cwiczenia_Pandas

./: Bioenergy_generation.csv  Bioenergy_generation.xlsx  cwiczenia_pandas.ipynb  notatki.txt  pyproject.toml
